--- a/Linear_Regression.ipynb
+++ b/Linear_Regression.ipynb
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7feb610013c8>"
+       "<matplotlib.legend.Legend at 0x7f447278f978>"
       ]
      },
      "execution_count": 5,
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,31 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Scikit Learn cannot take rank 1 matrix as input\n",
-    "x = x.reshape((len(df),1))\n",
-    "\n",
-    "# Initializing LinearRegression Model\n",
-    "reg = LinearRegression()\n",
-    "\n",
-    "# Fitting the model with training data\n",
-    "reg = reg.fit(x,y)\n",
-    "\n",
-    "# Predicting y\n",
-    "y_pred = reg.predict(x)\n",
-    "\n",
-    "# Calculating Root Mean Square Error and R2 Score\n",
-    "mse = mean_squared_error(y, y_pred)\n",
-    "rmse = np.sqrt(mse)\n",
-    "r2_score = reg.score(x, y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -371,8 +347,21 @@
     }
    ],
    "source": [
+    "x = x.reshape((len(df), 1))\n",
+    "\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "model.fit(x, y)\n",
+    "\n",
+    "y_pred = model.predict(x)\n",
+    "\n",
+    "mse = mean_squared_error(y, y_pred)\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "r2 = model.score(x, y)\n",
+    "\n",
     "print('Root Mean Square Error - ', rmse)\n",
-    "print('R2 Score - ', r2_score)"
+    "print('R2 Score - ', r2)"
    ]
   },
   {
@@ -447,10 +436,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.arange(10)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = b.reshape((len(b), 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.arange(10)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10, 10)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(b * a).shape"
+   ]
   }
  ],
  "metadata": {
