Decision Tree notes

--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -5,10 +5,14 @@
    "metadata": {},
    "source": [
     "* entropy in decison tree\n",
-    "* information gain, id3, gini, chi square, reduction of variance\n",
+    "* information gain, gini, chi square,\n",
+    "* id3 \n",
+    "* reduction in variance\n",
     "* pruning\n",
     "* handle overfitting\n",
-    "* kaggle decision tree"
+    "* kaggle decision tree\n",
+    "* enseble modelling\n",
+    "* tree based ensemble models"
    ]
   },
   {
@@ -24,9 +28,18 @@
     "* **Categorical Variable Decision Tree**: Decision Tree which has categorical target variable then it called as categorical variable decision tree.\n",
     "* **Continuous Variable Decision Tree**: Decision Tree which has continuous target variable then it is called as Continuous Variable Decision Tree.\n",
     "\n",
+    "## Advantages\n",
+    "* It can easily capture Non-linear patterns.\n",
+    "* It requires fewer data preprocessing from the user, for example, there is no need to normalize columns.\n",
+    "* It can be used for feature engineering such as predicting missing values, suitable for variable selection.\n",
+    "* The decision tree has no assumptions about distribution because of the non-parametric nature of the algorithm.\n",
+    "\n",
     "## Disadvantages\n",
     "1. **Over fitting**: Over fitting is one of the most practical difficulty for decision tree models. This problem gets solved by setting constraints on model parameters and pruning (discussed in detailed below).\n",
     "2. **Not fit for continuous variables**: While working with continuous numerical variables, decision tree looses information when it categorizes variables in different categories.\n",
+    "3. Sensitive to noisy data. It can overfit noisy data.\n",
+    "4. The small variation(or variance) in data can result in the different decision tree. This can be reduced by bagging and boosting algorithms.\n",
+    "5. Decision trees are biased with imbalance dataset, so it is recommended that balance out the dataset before creating the decision tree.\n",
     "\n",
     "## Attribute Selection Measures\n",
     "Attribute selection measure is a heuristic for selecting the splitting criterion that partition data into the best possible manner. It is also known as **splitting rules** because it helps us to determine breakpoints for tuples on a given node. ASM provides a rank to each feature(or attribute) by explaining the given dataset. Best score attribute will be selected as a splitting attribute (Source). In the case of a continuous-valued attribute, split points for branches also need to define.\n",
@@ -38,7 +51,16 @@
     "## **What is entropy?**\n",
     "* https://towardsdatascience.com/entropy-how-decision-trees-make-decisions-2946b9c18c8\n",
     "\n",
-    "Entropy is less if data is homogeneous\n",
+    "Entry is measure of disorder in the data. If all the data is of same category then there is no disorder and entropy is 0.\n",
+    "So entropy is less if data is homogeneous else it is high.\n",
+    "\n",
+    "The formula for entropy is -\n",
+    "\n",
+    "$$E(S) = \\sum_{i=1}^{c} - p_i \\log_2 p_i$$\n",
+    "\n",
+    "Here '$P_i$' is [frequentist probability](https://stats.stackexchange.com/questions/31867/bayesian-vs-frequentist-interpretations-of-probability) of an element or class 'i' in our data.\n",
+    "\n",
+    "Does it matter why entropy is measured using log base 2 or why entropy is measured between 0 and 1 and not some other range? No. It’s just a metric. It’s not important to know how it came to be. It’s important to know how to read it and what it tells us, which we just did above. Entropy is a measure of disorder or uncertainty and the goal of machine learning models and Data Scientists in general is to reduce uncertainty.\n",
     "\n",
     "Most popular selection measures are:\n",
     "* Information Gain (Entropy)\n",
@@ -58,7 +80,12 @@
     "* http://www.saedsayad.com/decision_tree_reg.htm\n",
     "* https://www.datacamp.com/community/tutorials/decision-tree-classification-python\n",
     "* https://towardsdatascience.com/decision-trees-in-machine-learning-641b9c4e8052\n",
-    "* https://medium.com/@rishabhjain_22692/decision-trees-it-begins-here-93ff54ef134"
+    "* https://medium.com/@rishabhjain_22692/decision-trees-it-begins-here-93ff54ef134\n",
+    "\n",
+    "Evaluation\n",
+    "* Accuracy\n",
+    "* Precision\n",
+    "* Recall"
    ]
   }
  ],
@@ -78,7 +105,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
