--- a/Decision_Tree.ipynb
+++ b/Decision_Tree.ipynb
@@ -12,7 +12,10 @@
     "* handle overfitting\n",
     "* kaggle decision tree\n",
     "* enseble modelling\n",
-    "* tree based ensemble models"
+    "* tree based ensemble models\n",
+    "* cross validation (gridsearch)\n",
+    "* decision tree regression\n",
+    "* bagging, randomeforest, boosting"
    ]
   },
   {
@@ -105,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
