--- a/Decision_Trees.ipynb
+++ b/Decision_Trees.ipynb
@@ -15,7 +15,10 @@
     "* tree based ensemble models\n",
     "* cross validation (gridsearch)\n",
     "* decision tree regression\n",
-    "* bagging, randomeforest, boosting"
+    "* bagging, boosting\n",
+    "* random forest\n",
+    "* My model has more biased or more variance?\n",
+    "* k-means k-nn"
    ]
   },
   {
@@ -82,13 +85,20 @@
     "* https://www.analyticsvidhya.com/blog/2016/04/complete-tutorial-tree-based-modeling-scratch-in-python/\n",
     "* http://www.saedsayad.com/decision_tree_reg.htm\n",
     "* https://www.datacamp.com/community/tutorials/decision-tree-classification-python\n",
-    "* https://towardsdatascience.com/decision-trees-in-machine-learning-641b9c4e8052\n",
     "* https://medium.com/@rishabhjain_22692/decision-trees-it-begins-here-93ff54ef134\n",
     "\n",
     "Evaluation\n",
     "* Accuracy\n",
     "* Precision\n",
-    "* Recall"
+    "* Recall\n",
+    "* AUC\n",
+    "* Log Loss\n",
+    "* Categorical cross entropy\n",
+    "* F1 score, F1 beta\n",
+    "\n",
+    "https://towardsdatascience.com/the-5-classification-evaluation-metrics-you-must-know-aa97784ff226\n",
+    "\n",
+    "Normalization should have no impact on the performance of a decision tree. It is generally useful, when you are solving a system of equations, least squares, etc, where you can have serious issues due to rounding errors. In decision tree, you are just comparing stuff and branching down the tree, so normalization would not help."
    ]
   }
  ],
