Updated LR, Added another project for LR using titanic, created helper functions, create a package for loss function

--- a/4_logistic_regression.ipynb
+++ b/4_logistic_regression.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# Logistic Regression\n",
     "\n",
-    "### Contrary to it's name Logistic Regression does classification and not regression (prediction). It is non-linear in nature therefore fits better with data with curves ie corelation is not linear\n",
+    "### Contrary to it's name Logistic Regression does classification and not regression (prediction). It is non-linear in nature therefore fits better with data with curves ie corelation is not linear.\n",
     "\n",
-    "Logistic regression involves finding the \"best fit\" curve\n",
+    "It does so by fitting an **S-CURVE** on the training data. Logistic regression involves finding the \"best fit\" curve.\n",
     "\n",
     "$$p(y_{i}) = \\frac{1}{1 + e^-(A+B_{i})}$$\n",
     "\n",
@@ -18,7 +18,18 @@
     "\n",
     "* Output of classification modle is always a probability score. We set a threshold and output on basis of that.\n",
     "* Classification is for predicting categorical data.\n",
-    "* It fits a curve on our data."
+    "* It fits a curve on our data.\n",
+    "\n",
+    "Loss Function / Cost Function - It is used to calculate the loss and then used to further improve the model to create it robust. **Cross Entropy** is used to measure loss of a Logistic Regression Model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross Entropy\n",
+    "Classification model gives a probality score and checks it with certain threshold to classify labels. Cross Entropy measures how well the estimated probalities match actual label.\n",
+    "\n"
    ]
   },
   {
